tests/baselines/reference/nonExportedElementsOfMergedModules.errors.txt
nonExportedElementsOfMergedModules.ts(13,7): error TS2339: Property 'x' does not exist on type 'typeof B'.


==== nonExportedElementsOfMergedModules.ts (1 errors) ====
    namespace One {
        enum A { X }
        namespace B {
            export var x;
        }
    }
    
    namespace One {
        enum A { Y }
        namespace B {
            export var y;
        }
        B.x;
          ~
!!! error TS2339: Property 'x' does not exist on type 'typeof B'.
        B.y;
    }
    